fix: align cli e2e tests with review feedback
Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>